fix: improve ExtraKeys contrast in light theme

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,7 @@
     dracula --default --prefersdark,
     cupcake;
 }
+
+[data-theme="cupcake"] .rein-logo {
+  filter: brightness(0);
+}
